saveCouriers method fixed